5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1577_1560.log
== TEST (2019-03-26 18:37:36) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.)
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:39) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.)
-- EXECUTION TIME:
0.13729
-- ERROR:
  File "/home/codebench/codes/1577/1560/main.py", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:15) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower())
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:27) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:28) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
-- EXECUTION TIME:
0.15487
-- ERROR:
  File "/home/codebench/codes/1577/1560/main.py", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:50) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:51) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.134235
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
